hphp/test/zend/good/zend/bug41117_1.php
<?php
class foo {
  function __construct($this) {
    echo $this."\n";
  }
}
$obj = new foo("Hello world");
?>